# avatar-creator

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
core/flows/: __init__.py  avatar_create.py  model_prepare.py  prepare.py
core/routers/: avatar.py  health.py
core/steps/: model_prepare.py
core/steps/modules/: __init__.py
core/steps/modules/models/: base.py  landmark.py  vae.py
core/steps/modules/utilities/: s3_module.py
core/steps/utils/face_detection/: api.py  utils.py
core/steps/utils/face_detection/detection/sfd/: sfd_detector.py
core/steps/utils/face_parsing/: __init__.py
models/: __init__.py  errors.py  s3.py
settings/: __init__.py  config.py
utils/: __init__.py  exception_handlers.py  helpers.py  logging.py
