[tool.poetry]
name = "avatar-creator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.0.1", source = "pytorch"}
torchvision = {version = "0.15.2", source = "pytorch"}
torchaudio = {version = "2.0.2", source = "pytorch"}
diffusers = "^0.29.2"
numpy = ">=1.17,<2.0.0"
fastapi = "^0.111.1"
openmim = "^0.3.9"
mmdet = "3.2.0"
mmpose = "1.3.2"
mmengine = "0.10.4"
mmcv = {url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0.0/mmcv-2.1.0-cp310-cp310-manylinux1_x86_64.whl"}
aioboto3 = "^13.1.1"
uvloop = "^0.19.0"
sse-starlette = "^2.1.3"
prefect = "^3.1.7"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[installer]
no-root = true